# ollagram

./: .gitignore  .vercelignore  AGENTS.md  Cargo.toml  README.md  package.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml
api/: telegram.rs
ollagram/: config.rs  formatting.rs  lib.rs  llm.rs  ollagram.rs  polling.rs  storage.rs  telegram.rs  webhook.rs
public/: index.html
scripts/: webhook.ts
tests/: telegram_client.rs
