[package]
name = "ollagram"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
vercel_runtime = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
http-body-util = "0.1"
pretty_env_logger = "0.5"
log = "0.4"
aisdk = { version = "0.5.2", features = ["openai", "openaicompatible"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[lib]
path = "ollagram/lib.rs"

[[bin]]
name = "telegram"
path = "api/telegram.rs"

[[bin]]
name = "polling"
path = "ollagram/polling.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
